--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.0.5
   fluttertoast: ^8.1.2
   smooth_star_rating_null_safety: ^1.0.4+2
+  convex_bottom_bar: ^3.1.0+1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
